--- a/index.html
+++ b/index.html
@@ -1,149 +1,145 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS & サービス障害情報サイト</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #232f3e;
-            color: white;
-            padding: 15px 20px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 30px;
-        }
-        th, td {
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #eee;
-        }
-        .status-normal { background-color: #d4edda; }  /* 緑 */
-        .status-warning { background-color: #fff3cd; } /* 黄 */
-        .status-error { background-color: #f8d7da; }   /* 赤 */
-        .timeline {
-            margin-top: 20px;
-        }
-        footer {
-            background-color: #232f3e;
-            color: white;
-            text-align: center;
-            padding: 15px 0;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TogetherBot 公式サイト</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: "Noto Sans JP", sans-serif;
+      background: #0d1117;
+      color: #f5f5f5;
+      text-align: center;
+    }
+
+    /* 🔹スクロールバナー */
+    .scroll-banner {
+      background: #ff4444;
+      color: white;
+      padding: 10px 0;
+      overflow: hidden;
+      white-space: nowrap;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      font-weight: bold;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+
+    .scroll-banner span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 15s linear infinite;
+    }
+
+    @keyframes scroll {
+      from { transform: translateX(0%); }
+      to { transform: translateX(-100%); }
+    }
+
+    header {
+      background: linear-gradient(135deg, #5865f2, #4b59c0);
+      padding: 80px 20px;
+      color: white;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #7289da;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #5b6eae;
+      transform: scale(1.05);
+    }
+
+    .features {
+      padding: 60px 20px;
+    }
+
+    .cards {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .card {
+      background: #161b22;
+      padding: 20px;
+      border-radius: 15px;
+      width: 250px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    }
+
+    .invite {
+      background: #1f2937;
+      padding: 60px 20px;
+    }
+
+    .btn.large {
+      font-size: 1.2rem;
+      padding: 20px 40px;
+    }
+
+    footer {
+      padding: 20px;
+      font-size: 0.9rem;
+      background: #0b0f14;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
+  <!-- 🔔 スクロールバナー -->
+  <div class="scroll-banner">
+    <span>⚠️ 導入時は管理者ロールを渡してからご利用ください ⚠️ 導入時は管理者ロールを渡してからご利用ください ⚠️</span>
+  </div>
 
-<header>
-    <h1>AWS & サービス障害情報サイト</h1>
-    <p>リージョン・サービス別のステータスを確認できます</p>
-</header>
+  <header>
+    <h1>TogetherBot</h1>
+    <p>あなたのDiscordサーバーを、もっと便利に。</p>
+    <a href="https://discord.com/oauth2/authorize?client_id=1418365961043447889&permissions=8&scope=bot" class="btn">Botを招待</a>
+  </header>
 
-<main>
-    <h2>AWSサービス状況ダッシュボード</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>サービス</th>
-                <th>東京</th>
-                <th>オレゴン</th>
-                <th>バージニア</th>
-                <th>ユーザーコメント</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>EC2</td>
-                <td class="status-normal">✅ 正常</td>
-                <td class="status-normal">✅ 正常</td>
-                <td class="status-normal">✅ 正常</td>
-                <td>0件</td>
-            </tr>
-            <tr>
-                <td>S3</td>
-                <td class="status-normal">✅ 正常</td>
-                <td class="status-normal">✅ 正常</td>
-                <td class="status-normal">✅ 正常</td>
-                <td>0件</td>
-            </tr>
-            <tr>
-                <td>RDS</td>
-                <td class="status-normal">✅ 正常</td>
-                <td class="status-normal">✅ 正常</td>
-                <td class="status-normal">✅ 正常</td>
-                <td>0件</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <div class="timeline">
-        <h2>2025年10月20日 アメリカ停電・サービス障害（復旧済み）</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>地域</th>
-                    <th>サービス</th>
-                    <th>状態 / 内容</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>アメリカ</td>
-                    <td>Fortnite</td>
-                    <td class="status-normal">✅ 復旧済み</td>
-                </tr>
-                <tr>
-                    <td>アメリカ</td>
-                    <td>Roblox</td>
-                    <td class="status-normal">✅ 復旧済み</td>
-                </tr>
-                <tr>
-                    <td>アメリカ</td>
-                    <td>Nintendo</td>
-                    <td class="status-normal">✅ 復旧済み</td>
-                </tr>
-                <tr>
-                    <td>アメリカ</td>
-                    <td>Zoom</td>
-                    <td class="status-normal">✅ 復旧済み</td>
-                </tr>
-                <tr>
-                    <td>アメリカ</td>
-                    <td>その他オンラインサービス（AWS依存）</td>
-                    <td class="status-normal">✅ 復旧済み</td>
-                </tr>
-            </tbody>
-        </table>
+  <section class="features">
+    <h2>主な機能</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>✅ 認証システム</h3>
+        <p>荒らし対策やメンバー認証を自動化。</p>
+      </div>
+      <div class="card">
+        <h3>⚙️ サーバー管理</h3>
+        <p>ロール付与、BAN、ログ記録などを簡単に。</p>
+      </div>
+      <div class="card">
+        <h3>📊 情報コマンド</h3>
+        <p>ユーザー・サーバー情報を一発取得。</p>
+      </div>
     </div>
+  </section>
 
-    <div class="notifications">
-        <h2>通知設定</h2>
-        <ul>
-            <li>Discord Webhook登録</li>
-            <li>Twitter自動投稿設定</li>
-            <li>メール通知設定</li>
-        </ul>
-    </div>
-</main>
+  <section class="invite">
+    <h2>導入はこちらから</h2>
+    <a href="https://discord.com/oauth2/authorize?client_id=1418365961043447889&permissions=8&scope=bot" class="btn large">Botを導入する</a>
+  </section>
 
-<footer>
-    <p>&copy; 2025 AWS & サービス障害情報サイト</p>
-</footer>
-
+  <footer>
+    <p>© 2025 TogetherBot | Developed by jpfo</p>
+  </footer>
 </body>
 </html>
